--- a/styles/main.css
+++ b/styles/main.css
@@ -31,8 +31,8 @@ body {
 }
 
 .header-text-container {
-    flex-grow: 1; /* Allows the container to grow and center the text */
-    margin: 0 40px; /* Adds space on the sides so text doesn't hit button */
+    flex-grow: 1;
+    margin: 0 40px;
 }
 
 /* Back Button Styles */
@@ -44,8 +44,8 @@ body {
     padding: 0;
     border-radius: 50%;
     transition: background-color 0.3s ease;
-    position: absolute; /* Positions the button independently */
-    left: 20px; /* Aligns to the left */
+    position: absolute;
+    left: 20px;
 }
 
 .back-button:hover {
@@ -134,9 +134,10 @@ body {
     color: rgba(255, 255, 255, 0.5);
 }
 
+/* Specific styling for the sets and reps inputs */
 .sets-input,
 .reps-input {
-    flex: 0 0 100px; /* Gives sets and reps inputs a fixed width */
+    flex: 1;
 }
 
 /* Style for the 'X' button */
@@ -168,6 +169,7 @@ body {
     cursor: pointer;
     margin-top: 10px;
     transition: background-color 0.3s ease, border-color 0.3s ease;
+    width: 100%; /* Makes the button full width */
 }
 
 .cta-button:hover {
